Menu de gauche : alignement à gauche des choix du menu. Bug/issue : 106
git-svn-id: http://ascoweb.googlecode.com/svn/trunk@521 0621ce33-663a-0410-bb36-b14c205f76dc

--- a/web/css/ascodocpsy/site.css
+++ b/web/css/ascodocpsy/site.css
@@ -18,7 +18,7 @@ a img
     list-style-image: none;
     list-style-type: none;
      
-    text-align: center;
+    text-align: left;
     /*margin-bottom: 0.3em;*/
 }
 
